--- a/index.html
+++ b/index.html
@@ -128,9 +128,19 @@
       <div class="hero-bg-video">
         <!-- Selfhosted Video Start -->
         <!-- <video autoplay muted loop id="myvideo"><source src="images/hero-bg-video.mp4" type="video/mp4"></video> -->
-        <video autoplay muted loop id="myvideo">
-          <source src="images/gym/banner.MP4" type="video/mp4" />
-        </video>
+
+        <section class="vdo">
+          <iframe
+            width="100%"
+            height="700"
+            src="https://www.youtube-nocookie.com/embed/v4sDmkCZklA?autoplay=1&mute=1&loop=1&playlist=v4sDmkCZklA&controls=0&rel=0&modestbranding=1"
+            title="YouTube video player"
+            frameborder="0"
+            allow="autoplay; encrypted-media"
+            allowfullscreen
+          >
+          </iframe>
+        </section>
 
         <!-- Selfhosted Video End -->
 
