--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </header>
     <!-- Header End -->
 
-    <div class="hero">
+    <div class="hero hero-bg-image parallaxie">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6">
@@ -131,361 +131,7 @@
               <!-- Section Title Start -->
               <div class="section-title dark-section">
                 <h1 class="text-anime-style-2" data-cursor="-opaque">
-                  <div style="position: relative; display: inline-block">
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      Y
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      o
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      u
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      r
-                    </div>
-                  </div>
-                  <div style="position: relative; display: inline-block">
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      b
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      o
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      d
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      y
-                    </div>
-                  </div>
-                  <div style="position: relative; display: inline-block">
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      c
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      a
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      n
-                    </div>
-                  </div>
-                  <span
-                    ><div style="position: relative; display: inline-block">
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        s
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        t
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        a
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        n
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        d
-                      </div>
-                    </div>
-                    <div style="position: relative; display: inline-block">
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        a
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        l
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        m
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        o
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        s
-                      </div>
-                      <div
-                        style="
-                          position: relative;
-                          display: inline-block;
-                          opacity: 1;
-                          visibility: inherit;
-                          transform: translate(0px, 0px);
-                        "
-                      >
-                        t
-                      </div>
-                    </div></span
-                  >
-                  <div style="position: relative; display: inline-block">
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      a
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      n
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      y
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      t
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      h
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      i
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      n
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      g
-                    </div>
-                    <div
-                      style="
-                        position: relative;
-                        display: inline-block;
-                        opacity: 1;
-                        visibility: inherit;
-                        transform: translate(0px, 0px);
-                      "
-                    >
-                      .
-                    </div>
-                  </div>
+                  Your body can stand almost anything.
                 </h1>
                 <p
                   class="wow fadeInUp"
@@ -542,24 +188,6 @@
               <!-- Hero Button End -->
             </div>
             <!-- Hero Content End -->
-          </div>
-
-          <div class="col-lg-6">
-            <!-- Hero Image Start -->
-            <div class="hero-image">
-              <!-- Hero Img Start -->
-              <div class="hero-img">
-                <img src="images/gym/banner.jpg" alt="" />
-              </div>
-              <!-- Hero Img End -->
-
-              <!-- Expertise Circle Start -->
-              <!-- <div class="expertise-circle">
-                            <img src="images/expertise-circle.svg" alt="">
-                        </div> -->
-              <!-- Expertise Circle End -->
-            </div>
-            <!-- Hero Image End -->
           </div>
         </div>
       </div>
